--- a/Scoreboard/Resources/DarkTheme.xaml
+++ b/Scoreboard/Resources/DarkTheme.xaml
@@ -1,6 +1,14 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
+
+   <!-- Round dark gray panel -->
+   <Style TargetType="Border" x:Key="pnl-dark">
+      <Setter Property="Background" Value="#FF3F3F3F" />
+      <Setter Property="CornerRadius" Value="4" />
+      <Setter Property="BorderThickness" Value="0" />
+   </Style>
+   
    <!-- button -->
    <Style TargetType="Button" x:Key="btn-dark" >
       <Setter Property="FontSize" Value="13"/>
@@ -8,17 +16,45 @@
       <Setter Property="Template">
          <Setter.Value>
             <ControlTemplate TargetType="Button">
-               <Grid x:Name="grid">
-                  <Border x:Name="border" CornerRadius="4" BorderThickness="0" Background="#FF525252">
+               <Grid x:Name="btndarkgrid">
+                  <Border x:Name="btndarkborder" CornerRadius="4" BorderThickness="0" Background="#FF525252">
                      <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
                   </Border>
                </Grid>
                <ControlTemplate.Triggers>
+                  <Trigger Property="IsMouseOver" Value="True">
+                     <Setter Property="Background" TargetName="btndarkborder" Value="#FF646464"/>
+                  </Trigger>
                   <Trigger Property="IsPressed" Value="True">
-                     <Setter Property="Background" TargetName="border" Value="#FF6262FF"/>
+                     <Setter Property="Background" TargetName="btndarkborder" Value="#FF6262FF"/>
                   </Trigger>
                   <Trigger Property="IsEnabled" Value="False">
-                     <Setter Property="Opacity" TargetName="grid" Value="0.25"/>
+                     <Setter Property="Opacity" TargetName="btndarkgrid" Value="0.25"/>
+                  </Trigger>
+               </ControlTemplate.Triggers>
+            </ControlTemplate>
+         </Setter.Value>
+      </Setter>
+   </Style>
+   
+   <!-- control button -->
+
+   <Style TargetType="Button" x:Key="btn-ctrl" >
+      <Setter Property="Foreground" Value="White" />
+      <Setter Property="Template">
+         <Setter.Value>
+            <ControlTemplate TargetType="Button">
+               <Grid x:Name="btnctrlgrid">
+                  <Border x:Name="btnctrlborder" BorderThickness="0" Background="#FF111111">
+                     <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                  </Border>
+               </Grid>
+               <ControlTemplate.Triggers>
+                  <Trigger Property="IsMouseOver" Value="True">
+                     <Setter Property="Background" TargetName="btnctrlborder" Value="#FF222222"/>
+                  </Trigger>
+                  <Trigger Property="IsPressed" Value="True">
+                     <Setter Property="Background" TargetName="btnctrlborder" Value="#FF6262FF"/>
                   </Trigger>
                </ControlTemplate.Triggers>
             </ControlTemplate>
